Manifests/mhc-aks.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mhc-dev
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: apps/v1

kind: Deployment

metadata:

  name: mhc-back
  namespace: mhc-dev
  labels:
    app: mhc-back
spec:

  replicas: 1
  selector:
    matchLabels:
      app: mhc-back
  template:

    metadata:

      labels:

        app: mhc-back

    spec:

      containers:

      - name: mhc-back

        image: redis

        ports:

        - containerPort: 6379

          name: redis
      nodeSelector:
        app: "asp.net"    

---

apiVersion: v1

kind: Service

metadata:

  name: mhc-back
  namespace: mhc-dev
spec:
  type: ClusterIP
  ports:

  - port: 6379

  selector:

    app: mhc-back

---

apiVersion: apps/v1

kind: Deployment

metadata:

  name: mhc-front
  namespace: mhc-dev
spec:

  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:

      maxSurge: 1

      maxUnavailable: 1

  minReadySeconds: 5 
  selector:
    matchLabels:
      app: mhc-front
  template:

    metadata:

      labels:

        app: mhc-front

    spec:

      containers:

      - name: mhc-front

        image: __ACR__/myhealth.web:latest

        imagePullPolicy: Always

        ports:

        - containerPort: 80

        resources:

          requests:

            cpu: 250m

          limits:

            cpu: 500m

      nodeSelector:
        app: "asp.net"
---

apiVersion: v1

kind: Service

metadata:

  name: mhc-front
  namespace: mhc-dev
spec:

  type: ClusterIP

  ports:

  - port: 80

  selector:
    app: mhc-front
